# advent_code_2022

./: CMakeLists.txt  base.cc  main  main.cc
inputs/: 12_test.txt  15.txt  15_test.txt  16.txt  16_formatted.txt  5_processed.txt
models/: PathFinder.cpp  PathFinder.h  aoc.h  aucmachine.h  bfs.h  ocr.cpp  ocr.h  util.cpp  util.h
puzzles/: 10_1.cc  10_2.cc  11_1.cc  11_2.cc  12_1.cc  12_2.cc  13.cc  14_1.cc  14_2.cc  15_1.cc  17.cc  18.cc  1_1.cc  1_2.cc  20.cc  21_1.cc  22.cc  23.cc  2_2.cc  3_1.cc  3_2.cc  4_1.cc  4_2.cc  5_1.cc  5_2.cc  6_1.cc  6_2.cc  7_1.cc  7_2.cc  8_1.cc  8_2.cc  9_1.cc  cheat_16.py  cheat_20.py  cheat_24.py
unfinished/: 7_1.cc
